[package]
name = "boom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0"
tokio = "1.38.0"
uuid = "1.10.0"
zeromq = "0.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22.1"
rand = "0.8.5"
