[package]
name = "boom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.16.0"
rayon = "1.8.1"
serde = "1.0.196"
serde_bytes = "0.11.14"
serde_with = "3.6.1"
flate2 = "1.0.28"
regex = "1.10.3"
crossbeam = "0.8.4"
serde_json = "1.0.114"
tokio = "1.36.0"
futures = "0.3.30"
cargo-quickinstall = "0.2.10"
tracing = "0.1.40"
config = "0.14.0"

[dev-dependencies]
float-cmp = "0.9.0"
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]

[[bench]]
name = "boom_benchmark"
harness = false

[[bin]]
name = "boom"
path = "src/main.rs"

[lib]
name = "boom"
path = "src/mod.rs"
